Various minor clean-ups, simplifications and formatting (#679)